# orion_control

./: CMakeLists.txt  README.md  orion_control.xml  package.xml
src/bringup/config/: orionVI_controllers.yaml
src/bringup/launch/: orionVI.launch.py  orionVI_gazebo.launch.py  test_forward_position_controller.launch.py
src/description/gazebo/: orionVI.gazebo.xacro
src/description/launch/: view_robot.launch.py
src/description/ros2_control/: orionVI.ros2_control.xacro
src/description/urdf/: orionVI.urdf.xacro  orionVI_description.urdf.xacro
src/hardware/: orionVI.cpp
src/hardware/include/orion_control/: orionVI.hpp
